--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "jigsawstack-mcp-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "A suite of small fast models that automate the boring and complex tasks in every tech stack with specialized finetuning",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["web", "mcp", "server", "jigsawstack", "small", "fast", "models", "automation", "tasks", "specialized", "finetuning"],
+  "author": "JigsawStack",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.0",
+    "dotenv": "^16.4.7",
     "jigsawstack": "^0.0.26",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.5",
-    "typescript": "^5.7.3"
+    "zod": "3.24.2"
   }
 }
