--- a/smithery.yaml
+++ b/smithery.yaml
@@ -16,4 +16,4 @@ startCommand:
   commandFunction:
     # A function that produces the CLI command to start the MCP on stdio.
     |-
-    config=>({command:'node',args:['src/index.js'],env:{JIGSAWSTACK_API_KEY:config.jigsawStackApiKey}})
+    config=>({command:'node',args:['dist/index.js'],env:{JIGSAWSTACK_API_KEY:config.jigsawStackApiKey}})
