--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jigsawstack-mcp-server",
   "version": "0.1.0",
   "description": "A suite of small fast models that automate the boring and complex tasks in every tech stack with specialized finetuning",
-  "main": "src/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
