--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "build": "tsc && shx chmod +x dist/*.js",
-    "prepare": "npm run build"
-  },
+ "scripts": {
+  "build": "shx mkdir -p dist && shx cp index.js dist/index.js && shx cp -R src dist/src",
+  "prepare": "npm run build"
+},
+"devDependencies": {
+  "shx": "^0.3.4"
+},
   "keywords": ["web", "mcp", "server", "jigsawstack", "small", "fast", "models", "automation", "tasks", "specialized", "finetuning"],
   "author": "JigsawStack",
   "license": "ISC",
