--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "dist"
   ],
  "scripts": {
-  "build": "shx mkdir -p dist && shx cp index.js dist/index.js && shx cp -R src dist/src",
+  "build": "tsc",
   "prepare": "npm run build"
 },
 "devDependencies": {
-  "shx": "^0.3.4"
+  "shx": "^0.3.4",
+  "typescript": "^4.5.4",
+  "@types/node": "^16.11.7"
 },
   "keywords": ["web", "mcp", "server", "jigsawstack", "small", "fast", "models", "automation", "tasks", "specialized", "finetuning"],
   "author": "JigsawStack",
