removing config files for smithery to create a PR automatically.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/**/*", "types/**/*", "scripts/**/*", "index.ts"],
   "exclude": ["node_modules", "dist"]
 }
