--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "jigsawstack-mcp-server",
   "version": "0.1.0",
   "description": "A suite of small fast models that automate the boring and complex tasks in every tech stack with specialized finetuning",
-  "main": "index.js",
   "type": "module",
   "bin": {
     "jigsawstack-mcp-server": "dist/index.js"
@@ -12,7 +11,9 @@
   ],
  "scripts": {
   "build": "tsc",
-  "prepare": "npm run build"
+  "start": "node dist/index.js",
+  "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node index.ts",
+  "inspector": "npx @modelcontextprotocol/inspector npm run dev"
 },
 "devDependencies": {
   "shx": "^0.3.4",
