--- a/smithery.yaml
+++ b/smithery.yaml
@@ -4,9 +4,16 @@ startCommand:
   type: stdio
   configSchema:
     # JSON Schema defining the configuration options for the MCP.
-    {}
+    type: object
+    required:
+      - jigsawStackAPIKey
+    properties:
+      jigsawStackAPIKey:
+        type: string
+        description: 'API key for the Jigsaw Stack API.'
+    additionalProperties: false
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'node', args: ['dist/index.js'] })
+    (config) => ({ command: 'node', args: ['dist/index.js'] env: { JIGSAWSTACK_API_KEY: config.jigsawStackAPIKey } })
   exampleConfig: {}
