--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
   "bin": {
     "jigsawstack-mcp-server": "dist/index.js"
   },
-  "files": [
-    "dist"
-  ],
- "scripts": {
-  "build": "tsc",
-  "start": "node dist/index.js",
-  "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node index.ts",
-  "inspector": "npx @modelcontextprotocol/inspector npm run dev"
-},
-"devDependencies": {
-  "shx": "^0.3.4",
-  "typescript": "^4.5.4",
-  "@types/node": "^16.11.7"
-},
+  "files": ["dist"],
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node index.ts",
+    "inspector": "npx @modelcontextprotocol/inspector npm run dev",
+    "format": "biome check --write ."
+  },
+  "devDependencies": {
+    "shx": "^0.3.4",
+    "typescript": "^4.5.4",
+    "@types/node": "^16.11.7"
+  },
   "keywords": ["web", "mcp", "server", "jigsawstack", "small", "fast", "models", "automation", "tasks", "specialized", "finetuning"],
   "author": "JigsawStack",
   "license": "ISC",
