updating Dockerfile to use dist/index.js

--- a/ai-web-search/Dockerfile
+++ b/ai-web-search/Dockerfile
@@ -18,5 +18,5 @@ RUN npm run build
 
 ENV JIGSAWSTACK_API_KEY=<YOUR_KEY>
 
-# Start the server
-CMD ["npm", "start"]
+# Command will be provided by smithery.yaml
+CMD ["node", "dist/index.js"]
