fix: incorrect properties in smithery.yaml

--- a/ai-web-search/smithery.yaml
+++ b/ai-web-search/smithery.yaml
@@ -7,7 +7,7 @@ startCommand:
     required:
       - jigsawstackApiKey
     properties:
-      jigsawStackApiKey:
+      jigsawstackApiKey:
         type: string
         description: The API key for the JigsawStack AI Web Scrape server.
   commandFunction:
