Upgrading vOCR with jigsawstack-js v0.2.4

--- a/vOCR/package.json
+++ b/vOCR/package.json
@@ -1,14 +1,12 @@
 {
   "name": "vocr",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Let AI translate your text, in 180+ language pairs! From JigsawStack.",
   "type": "module",
   "bin": {
     "jigsawstack-mcp-server": "dist/index.js"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -22,25 +20,13 @@
     "shx": "^0.3.4",
     "typescript": "^4.5.4"
   },
-  "keywords": [
-    "web",
-    "mcp",
-    "server",
-    "jigsawstack",
-    "small",
-    "fast",
-    "models",
-    "automation",
-    "tasks",
-    "specialized",
-    "finetuning"
-  ],
+  "keywords": ["web", "mcp", "server", "jigsawstack", "small", "fast", "models", "automation", "tasks", "specialized", "finetuning"],
   "author": "JigsawStack",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.0",
     "dotenv": "^16.4.7",
-    "jigsawstack": "^0.0.26",
+    "jigsawstack": "^0.2.4",
     "ts-node": "^10.9.2",
     "zod": "3.24.2"
   }
