--- a/mcp-speectotext/smithery.yaml
+++ b/mcp-speectotext/smithery.yaml
@@ -10,7 +10,13 @@ startCommand:
       jigsawstackApiKey:
         type: string
   commandFunction:
-    # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
-    (config) => ({ command: 'node', args: ['dist/index.js'], env: { JIGSAWSTACK_API_KEY: config.jigsawstackApiKey } })
-  exampleConfig: {}
+    (config) => ({
+      command: 'node',
+      args: ['dist/index.js'],
+      env: {
+        JIGSAWSTACK_API_KEY: config.jigsawstackApiKey
+      }
+    })
+  exampleConfig:
+    jigsawstackApiKey: "sk-xxxxxxxxxxxxxxxxxxxxxxxx"
