--- a/mcp-aiscrape/package.json
+++ b/mcp-aiscrape/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sentiment",
-  "version": "0.1.1",
-  "description": "Analyze the sentiment of your text with AI, powered by JigsawStack",
+  "name": "jigsawstack-aiscrape",
+  "version": "0.0.1",
+  "description": "AI Scrape with AI, powered by JigsawStack",
   "type": "module",
   "bin": {
     "jigsawstack-mcp-server": "dist/index.js"
