--- a/image-generation/smithery.yaml
+++ b/image-generation/smithery.yaml
@@ -1,5 +1,8 @@
 # Smithery configuration file: https://smithery.ai/docs/config#smitheryyaml
-
+runtime: "container"
+build:
+  dockerfile: "Dockerfile"
+  dockerBuildPath: "."
 startCommand:
   type: stdio
   configSchema:
